--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
 
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
-            <div class="item active">
+            <div id="introslide1" class="item active">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg.jpg"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
             </div>
-            <div class="item">
+            <div id="introslide2" class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg2.jpg"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
-            <div class="item">
+            <div id="introslide3" class="item">
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg3.jpg"></div>
                 <div class="carousel-caption">
@@ -138,11 +138,10 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <h4>Mai<br>2014</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>13. Mai 2014</h4>
                                     <h4 class="subheading">Gründung des Vereins</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -395,3 +394,5 @@
     </script>
 
 </body>
+
+</html>
