--- a/index.html
+++ b/index.html
@@ -84,24 +84,24 @@
 
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
-            <div id="introslide1" class="item active">
+            <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg.jpg"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                <div class="introslide1 fill"><img alt="Slide" src="img/dummy/slide_football-heart.jpg"></div>
+                <div class="introslide1 carousel-caption">
+                    <h1>Möller Manlift Charity Cup</h1>
                 </div>
             </div>
-            <div id="introslide2" class="item">
+            <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg2.jpg"></div>
-                <div class="carousel-caption">
+                <div class="introslide2 fill"><img alt="Slide" src="img/dummy/keyboard-bg2.jpg"></div>
+                <div class="introslide2 carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
-            <div id="introslide3" class="item">
+            <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg3.jpg"></div>
-                <div class="carousel-caption">
+                <div class="introslide3 fill"><img alt="Slide" src="img/dummy/keyboard-bg3.jpg"></div>
+                <div class="introslide3 carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
             </div>
