Bugfixes Carousel layoutfähig Members mit basic layout version

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <!-- Navigation -->
+<!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
@@ -43,11 +43,8 @@
                 </button>
                 <a class="navbar-brand page-scroll titel" href="#page-top"><img alt="Titel" src="img/base/Herz_logo_med.png"><h1>Projekt Würzburg</h1></a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
@@ -68,49 +65,49 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
-    <!-- Intro Section -->
-    <header id="myCarousel" class="intro-section carousel slide">
+<!-- Header Carousel Intro Section -->
+    <header id="myCarouselIntro" class="intro-section carousel slide">
     <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarouselIntro" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarouselIntro" data-slide-to="1"></li>
+            <li data-target="#myCarouselIntro" data-slide-to="2"></li>
         </ol>
-
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
-            <div class="item active">
+            <div class="item bg intro1 active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="introslide1 fill"><img alt="Slide" src="img/dummy/slide_football-heart.jpg"></div>
-                <div class="introslide1 carousel-caption">
-                    <h1>Möller Manlift Charity Cup</h1>
+                <div class="fill"><img alt="Slide" src="img/dummy/slide_football-heart.png"></div>
+                <div class="carousel-caption">
+                    <h2>Möller Manlift Charity Cup</h2>
+                    <h4>Fußball für den guten Zweck</h4>
+                    <p>Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper.</p>
+                    <a class="btn btn-default readmore" href="#">Mehr erfahren</a>
                 </div>
             </div>
-            <div class="item">
+            <div class="item bg intro2">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="introslide2 fill"><img alt="Slide" src="img/dummy/keyboard-bg2.jpg"></div>
-                <div class="introslide2 carousel-caption">
+                <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg2.jpg"></div>
+                <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
-            <div class="item">
+            <div class="item bg intro3">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="introslide3 fill"><img alt="Slide" src="img/dummy/keyboard-bg3.jpg"></div>
-                <div class="introslide3 carousel-caption">
+                <div class="fill"><img alt="Slide" src="img/dummy/keyboard-bg3.jpg"></div>
+                <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
             </div>
         </div>
         <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <a class="left carousel-control" href="#myCarouselIntro" data-slide="prev">
             <span class="icon-prev"></span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <a class="right carousel-control" href="#myCarouselIntro" data-slide="next">
             <span class="icon-next"></span>
         </a>
     </header>
@@ -121,16 +118,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Mit dem Herzen dabei</h1>
-                    <h3 class="subheading">Unsere Philosophie des Helfens</h3>
-                    <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                     <a class="btn btn-default page-scroll" href="#page-top">Click Me to go up</a>
+                    <h3 class="subheading">Philosophie des Helfens</h3>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                     <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll" href="#page-top">Click Me to go up</a>
+                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                 </div>
             </div>
             <div class="row timeline-starter">
@@ -152,6 +146,7 @@
                         </ul>
                 </div>
             </div>
+            <a class="btn btn-default page-scroll" href="#page-top">Click Me to go up</a>
         </div>
     </section>
 
@@ -300,11 +295,30 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Das sind wir</h1>
-                     <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll" href="#page-top">Click Me to go up</a>
-                 
+                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                 </div>
             </div>
+            <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+          <h2>Steffen Preuß</h2>
+          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+          <h2>Heading</h2>
+          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+      <a class="btn btn-default page-scroll" href="#page-top">Click Me to go up</a>
         </div>
     </section>
 
@@ -385,8 +399,8 @@
 
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/projekt-script.js"></script>
+    <script src="js/docs.js"></script>
     <script>
     $('.carousel').carousel({
         interval: 5000 //changes the speed
